replacing search box action to new search

--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -164,12 +164,11 @@
             </ul>
             {% if search_form %}
             <form id="searchbox" method="get"
-                class="navbar-form pull-right"
-                role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" id="id_q" autocomplete="off" name="q"
-                       {% if query %} value="{{ query }}" {% endif %}/>
-              </div>
+                class="navbar-search pull-right"
+                action="{% url 'search_v2' %}">
+              <input id="id_q" autocomplete="off" name="q"
+                   type="text" class="search-query" placeholder="Search"
+                   {% if query %} value="{{ query }}" {% endif %}/>
             </form>
             {% endif %}
           </div> <!-- .navbar-collapse -->
